--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <nav class=" main-nav ">
                 <a href="./index.html" class="logo"><span class="logo__first">Web</span><span
                         class="logo__second">Studio</span></a>
+                <button type="button" class="menu-btn menu-btn--open">
+                    <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
+                        <use href="./images/basic/adaptive.svg#close-btn" class="menu-btn__icon-close"></use>
+                        <use href="./images/basic/adaptive.svg#menu-btn" class="menu-btn__icon-menu"></use>
+                    </svg>
+                </button>
                 <ul class="main-nav__list">
                     <li class="main-nav__item">
                         <a href="./index.html" class="main-nav__link main-nav__link--current">Студія</a>
